--- a/.github/workflows/verify-commit.yml
+++ b/.github/workflows/verify-commit.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check Commit Type
         uses: gsactions/commit-message-checker@v1
         with:
-          pattern: '\[[^]]+\] .+$'
+          pattern: '^\[PRICE-[0-9]+\] .+$'
           flags: 'gm'
           error: 'Your first line has to contain a commit type like "[PRICE]".'
       - name: Check Line Length
