--- a/.github/workflows/verify-commit.yml
+++ b/.github/workflows/verify-commit.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Check Line Length
         uses: gsactions/commit-message-checker@v1
         with:
-          pattern: '^[^#].{74}'
-          error: 'The maximum line length of 74 characters is exceeded.'
+          pattern: '^\[PRICE-[0-9]+\].{5}'
+          error: 'Commit message should be alteast 5 charactes long (excluding ticket number)'
           excludeDescription: 'true' # optional: this excludes the description body of a pull request
           excludeTitle: 'true' # optional: this excludes the title of a pull request
           checkAllCommitMessages: 'true' # optional: this checks all commits associated with a pull request
